--- a/pages/home.html
+++ b/pages/home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="../styles/home.css">
+    <link rel="icon" href="../resources/images/ball.png" type="image/x-icon">
 </head>
 <body>
     <!-- Navbar -->
@@ -21,10 +22,12 @@
     <!-- Main content -->
     <div class="content">
         <div class="hero-container">
-            <video autoplay loop playsinline class="hero-video">
+            <video autoplay loop playsinline muted class="hero-video">
                 <source src="../resources/images/streetfootvid.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
+            <p class="text-sub-header"> Every Sunday at Grønnegade Stadium!</p>
+            <button class="btn-orange">SCHEDULE</button>
         </div>
         <p class="text-header">COURTS</p>
         <div class="court-container">
