finishing schedule page and match card design

--- a/pages/court.html
+++ b/pages/court.html
@@ -38,8 +38,8 @@
             <p id="court-lamps"></p>
         </div>
         <div class="button-container">
-            <button class="btn-orange">SCHEDULE</button>
-            <button class="btn-green">CREATE MATCH</button>
+            <button class="btn-orange" id="btn-schedule">SCHEDULE</button>
+            <button class="btn-green" id="btn-create-match">CREATE MATCH</button>
         </div>
         <div class="gallery-container">
         </div>
