finishing small functional and css touches on the schedule and home pages, ready to do make match page and flow

--- a/pages/home.html
+++ b/pages/home.html
@@ -27,7 +27,7 @@
                 Your browser does not support the video tag.
             </video>
             <p class="text-sub-header"> Every Sunday at Grønnegade Stadium!</p>
-            <button class="btn-orange">SCHEDULE</button>
+            <button class="btn-orange" id="btn-schedule">SCHEDULE</button>
         </div>
         <p class="text-header">COURTS</p>
         <div class="court-container">
