--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -33,7 +33,7 @@
 
         <!-- Create Button -->
         <div class="btn-create-container">
-            <button class="btn-orange" id="btn-create">CREATE</button>
+            <button class="btn-orange" id="btn-create-match">CREATE</button>
         </div>
     </div>
     <script type="module" src="../scripts/schedule.js"></script>
