copy structure that works on phone

--- a/pages/home.html
+++ b/pages/home.html
@@ -33,6 +33,6 @@
         <div class="court-container">
         </div>
     </div>
-    <script type="module" src="../scripts/home.js"></script>
+    <script type="module" src="../javascript/home.js"></script>
 </body>
 </html>
