--- a/pages/makematch.html
+++ b/pages/makematch.html
@@ -65,6 +65,6 @@
             <button class="btn-orange" id="btn-create-match">CREATE</button>
         </div>
     </div>
-    <script type="module" src="../scripts/makematch.js"></script>
+    <script type="module" src="../javascript/makematch.js"></script>
 </body>
 </html>
