--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -36,6 +36,6 @@
             <button class="btn-orange" id="btn-create-match">CREATE</button>
         </div>
     </div>
-    <script type="module" src="../scripts/schedule.js"></script>
+    <script type="module" src="../javascript/schedule.js"></script>
 </body>
 </html>
