--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <div class="loader">
         <img src="resources/images/ball.png" alt="Loading Ball">
     </div>
-    <script type="module" src="scripts/intro.js"></script>
+    <script type="module" src="javascript/intro.js"></script>
 </body>
-</html>
+</html> 
