--- a/pages/court.html
+++ b/pages/court.html
@@ -44,6 +44,6 @@
         <div class="gallery-container">
         </div>
     </div>
-    <script type="module" src="../scripts/court.js"></script>
+    <script type="module" src="../javascript/court.js"></script>
 </body>
 </html>
