--- a/pages/match.html
+++ b/pages/match.html
@@ -48,6 +48,6 @@
             <button class="btn-orange" id="btn-join-overlay">JOIN</button>
         </div>
     </div>
-    <script type="module" src="../scripts/match.js"></script>
+    <script type="module" src="../javascript/match.js"></script>
 </body>
 </html>
